--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
 <body>
     <h1> Esta es mi primera estupidez en web developing </h1>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus, culpa. Minima at in officia consequuntur voluptatem tenetur dicta cupiditate autem vero saepe sapiente neque quisquam magni unde nulla, tempora tempore.</p>
-    
+    <h2>Ahora probamos</h2>
 </body>
 </html>
