agregamos un enlace, y adjuntamos el CSS

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="estilos.css">
 </head>
 <body>
     <h1> Esta es mi primera estupidez en web developing </h1>
@@ -12,6 +13,6 @@
     <h2>Ahora probamos</h2>
 
 <p>Estamos en otra rama y veremos un merge</p>
-
+<a href="holi"></a>
 </body>
 </html>
