agregamos un enlace y lo modificamos

--- a/index.html
+++ b/index.html
@@ -13,6 +13,6 @@
     <h2>Ahora probamos</h2>
 
 <p>Estamos en otra rama y veremos un merge</p>
-<a href="holi"></a>
+<a href="holi">presione aqui</a>
 </body>
 </html>
